fix notification 17/06/2025